Fix issue found by SonarCloud: '"<strong>" and "<em>" tags should be used' - Web:BoldAndItalicTagsCheck

--- a/src/app/dashboard/gas-verbruik/gas-verbruik.component.html
+++ b/src/app/dashboard/gas-verbruik/gas-verbruik.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header h3 clickable" (click)="navigateToVerbruikDetails()">
-    <i class="fas fa-fire"></i> Gas
+    <i class="fas fa-fire" aria-hidden="true"></i> Gas
   </div>
   <div class="card-body">
     <div class="ledbar float-left">
