--- a/src/app/dashboard/klimaat-luchtvochtigheid/klimaat-luchtvochtigheid.component.html
+++ b/src/app/dashboard/klimaat-luchtvochtigheid/klimaat-luchtvochtigheid.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header h3 clickable" (click)="navigateToKlimaatHistory()">
-    <i class="fas fa-tint"></i> Luchtvochtigheid
+    <i class="fas fa-tint" aria-hidden="true"></i> Luchtvochtigheid
   </div>
   <div class="card-body">
     <div class="ledbar float-left">
@@ -12,10 +12,10 @@
       <span *ngIf="klimaat">{{ klimaat.luchtvochtigheid | number: '1.2-2' }}%</span>
       <span *ngIf="!klimaat">-%</span>
       <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.UP">
-        <i data-fa-transform="rotate-45" class="fas fa-arrow-up text-danger ml-1"></i>
+        <i data-fa-transform="rotate-45" class="fas fa-arrow-up text-danger ml-1" aria-hidden="true"></i>
       </span>
       <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.DOWN">
-        <i data-fa-transform="rotate--45" class="fas fa-arrow-down text-primary ml-1"></i>
+        <i data-fa-transform="rotate--45" class="fas fa-arrow-down text-primary ml-1" aria-hidden="true"></i>
       </span>
       <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.STABLE" class="text-success ml-1">
         <strong>&asymp;</strong>
