--- a/src/app/dashboard/klimaat-temperatuur/klimaat-temperatuur.component.html
+++ b/src/app/dashboard/klimaat-temperatuur/klimaat-temperatuur.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header h3 clickable" (click)="navigateToKlimaatHistory()">
-    <i class="fas fa-thermometer-half"></i> Temperatuur
+    <i class="fas fa-thermometer-half" aria-hidden="true"></i> Temperatuur
   </div>
   <div class="card-body">
     <div class="ledbar float-left">
