--- a/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
+++ b/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header h3 clickable" (click)="navigateToVerbruikDetails()">
-    <i class="fas fa-bolt"></i> Stroom
+    <i class="fas fa-bolt" aria-hidden="true"></i> Stroom
   </div>
   <div class="card-body">
     <div class="ledbar float-left">
@@ -24,11 +24,11 @@
 
     <p class="h6" *ngIf="meterstand">
       <span ngbTooltip="Daltarief">
-        <i class="fas fa-moon"></i> {{meterstand.stroomTarief1 | number: '1.3-3'}}
+        <i class="fas fa-moon" aria-hidden="true"></i> {{meterstand.stroomTarief1 | number: '1.3-3'}}
       </span>
       |
       <span ngbTooltip="Normaaltarief">
-        <i class="fas fa-sun"></i> {{meterstand.stroomTarief2 | number: '1.3-3'}}
+        <i class="fas fa-sun" aria-hidden="true"></i> {{meterstand.stroomTarief2 | number: '1.3-3'}}
       </span>
     </p>
     <p class="h6" *ngIf="!meterstand">
