--- a/src/app/date-navigator/date-navigator.component.html
+++ b/src/app/date-navigator/date-navigator.component.html
@@ -6,7 +6,7 @@
       <button (click)="navigate(-1)"
               class="btn btn-outline-secondary"
               [ngClass]="{'responsive-size': responsiveSize}"
-              type="button"><i class="fas fa-chevron-left"></i></button>
+              type="button"><i class="fas fa-chevron-left" aria-hidden="true"></i></button>
     </span>
 
     <!--suppress HtmlFormInputWithoutLabel -->
@@ -46,7 +46,7 @@
       <button type="button"
               class="btn btn-outline-secondary responsive-size"
               [ngClass]="{'responsive-size': responsiveSize}"
-              (click)="navigate(+1)" [disabled]="isUpNavigationDisabled()"><i class="fas fa-chevron-right"></i></button>
+              (click)="navigate(+1)" [disabled]="isUpNavigationDisabled()"><i class="fas fa-chevron-right" aria-hidden="true"></i></button>
     </span>
 
   </div>
