--- a/src/app/klimaat/klimaat-highest-lowest/klimaat-highest-lowest.component.html
+++ b/src/app/klimaat/klimaat-highest-lowest/klimaat-highest-lowest.component.html
@@ -2,10 +2,10 @@
   <div class="col-md-3 mb-2">
     <div class="btn-group btn-group-toggle d-flex">
       <label class="btn btn-outline-secondary w-100" [ngClass]="{'active': sensorType === 'temperatuur'}">
-        <input type="checkbox" [checked]="sensorType === 'temperatuur'" (click)="setSensorType('temperatuur')"><i class="fas fa-thermometer-half"></i> &#8451;
+        <input type="checkbox" [checked]="sensorType === 'temperatuur'" (click)="setSensorType('temperatuur')"><i class="fas fa-thermometer-half" aria-hidden="true"></i> &#8451;
       </label>
       <label class="btn btn-outline-secondary w-100" [ngClass]="{'active': sensorType === 'luchtvochtigheid'}">
-        <input type="checkbox" [checked]="sensorType === 'luchtvochtigheid'" (change)="setSensorType('luchtvochtigheid')"><i class="fas fa-tint"></i> %
+        <input type="checkbox" [checked]="sensorType === 'luchtvochtigheid'" (change)="setSensorType('luchtvochtigheid')"><i class="fas fa-tint" aria-hidden="true"></i> %
       </label>
     </div>
   </div>
@@ -28,7 +28,7 @@
   <div class="col-md-12 col-lg-6 mb-2">
     <div class="card">
       <div class="card-header">
-        <h3><i class="fas fa-arrow-down text-info"></i> Laagst gemeten</h3>
+        <h3><i class="fas fa-arrow-down text-info" aria-hidden="true"></i> Laagst gemeten</h3>
       </div>
       <div class="card-body">
         <div class="table-responsive">
@@ -56,7 +56,7 @@
   <div class="col-md-12 col-lg-6">
     <div class="card">
       <div class="card-header">
-        <h3><i class="fas fa-arrow-up text-danger"></i> Hoogst gemeten</h3>
+        <h3><i class="fas fa-arrow-up text-danger" aria-hidden="true"></i> Hoogst gemeten</h3>
       </div>
       <div class="card-body">
         <div class="table-responsive">
