--- a/src/app/klimaat/klimaat-sensors/klimaat-sensors.component.html
+++ b/src/app/klimaat/klimaat-sensors/klimaat-sensors.component.html
@@ -6,7 +6,7 @@
 
 <div *ngIf="sensors && sensors.length === 0" class="table-responsive">
   <div class="alert alert-info">
-    <i class="fas fa-info-circle"></i> Er zijn nog geen klimaatsensors. <strong>Tip</strong>: Klimaatsensors worden automatisch toegevoegd zodra ze aangesloten worden en gegevens registreren.
+    <i class="fas fa-info-circle" aria-hidden="true"></i> Er zijn nog geen klimaatsensors. <strong>Tip</strong>: Klimaatsensors worden automatisch toegevoegd zodra ze aangesloten worden en gegevens registreren.
   </div>
 </div>
 
@@ -45,10 +45,10 @@
   <div class="form-group row">
     <div class="col-md-4 col-lg-3">&nbsp;</div>
     <div class="col-sm-9 col-md-7 col-lg-5">
-      <button type="button" class="btn btn-primary float-left" [hidden]="!selectedSensor" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash"></i> Verwijderen</button>
+      <button type="button" class="btn btn-primary float-left" [hidden]="!selectedSensor" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
       <div class="float-right">
-        <button type="button" class="btn btn-primary" (click)="cancelEdit()"><i class="fa fa-ban"></i> Annuleren</button>
-        <button type="submit" class="btn btn-primary ml-1" [disabled]="form.invalid"><i class="fa fa-check"></i> Opslaan</button>
+        <button type="button" class="btn btn-primary" (click)="cancelEdit()"><i class="fa fa-ban" aria-hidden="true"></i> Annuleren</button>
+        <button type="submit" class="btn btn-primary ml-1" [disabled]="form.invalid"><i class="fa fa-check" aria-hidden="true"></i> Opslaan</button>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
 
 <ng-template #deletionConformationDialog let-close="close" let-dismiss="dismiss">
   <div class="modal-header bg-warning text-light">
-    <h4 class="modal-title"><i class="fas fa-exclamation-triangle"></i> Bevestig</h4>
+    <h4 class="modal-title"><i class="fas fa-exclamation-triangle" aria-hidden="true"></i> Bevestig</h4>
   </div>
   <div class="modal-body">
     <p>Weet je het zeker?</p><p>Alle historie van de klimaatsensor <strong>{{selectedSensor.code}}</strong> zal worden verwijderd.</p>
