--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,17 +4,17 @@
       <div *ngIf="loginFailed" class="alert alert-danger">
         Ongeldige gebruiksnaam en/of wachtwoord
       </div>
-      <i class="fas fa-home fa-4x mb-4"></i>
+      <i class="fas fa-home fa-4x mb-4" aria-hidden="true"></i>
       <div class="form-group ml-3 mr-3">
         <div class="input-group mb-2">
           <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fas fa-user"></i></div>
+            <div class="input-group-text"><i class="fas fa-user" aria-hidden="true"></i></div>
           </div>
           <input class="form-control" type="text" id="username" name="username" [(ngModel)]="credentials.username" placeholder="Gebruikersnaam" required autofocus />
         </div>
         <div class="input-group mb-2">
           <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fas fa-key"></i></div>
+            <div class="input-group-text"><i class="fas fa-key" aria-hidden="true"></i></div>
           </div>
           <input class="form-control" type="password" id="password" name="password" [(ngModel)]="credentials.password" placeholder="Wachtwoord" required />
         </div>
