--- a/src/app/dashboard/gas-verbruik/gas-verbruik.component.html
+++ b/src/app/dashboard/gas-verbruik/gas-verbruik.component.html
@@ -16,7 +16,7 @@
     <p class="h3">Meterstand</p>
 
     <p class="h6" *ngIf="meterstand">
-      <span ngbTooltip="Normaaltarief"><i class="fas fa-moon" aria-hidden="true" ngbTooltip="Dal- en normaaltarief"></i> <i class="fas fa-sun"></i> {{meterstand.gas | number: '1.3-3'}}</span>
+      <span ngbTooltip="Normaaltarief"><i class="fas fa-moon" aria-hidden="true" ngbTooltip="Dal- en normaaltarief"></i> <i class="fas fa-sun" aria-hidden="true"></i> {{meterstand.gas | number: '1.3-3'}}</span>
     </p>
     <p class="h6" *ngIf="!meterstand">
       -
