Css width instead of html width (which is deprecated)

--- a/src/app/meterstand/meterstand.component.html
+++ b/src/app/meterstand/meterstand.component.html
@@ -12,10 +12,10 @@
   <table class="table table-bordered table-striped table-sm">
     <thead>
     <tr>
-      <th colspan="2" width="25%">Datum</th>
-      <th class="text-right" width="25%">Stroom daltarief</th>
-      <th class="text-right" width="25%">Stroom normaaltarief</th>
-      <th class="text-right" width="25%">Gas</th>
+      <th colspan="2" style="width: 25%">Datum</th>
+      <th class="text-right" style="width: 25%">Stroom daltarief</th>
+      <th class="text-right" style="width: 25%">Stroom normaaltarief</th>
+      <th class="text-right" style="width: 25%">Gas</th>
     </tr>
     </thead>
     <tbody>
