--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <home-navbar></home-navbar>
-<home-loading-indicator></home-loading-indicator>
+<ngx-spinner color="#f4b649" size="large" type="timer" class="spinner">Een moment a.u.b.</ngx-spinner>
 <home-error-handler></home-error-handler>
 <div class="container">
   <router-outlet></router-outlet>
