--- a/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
+++ b/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <p class="h3">Op dit moment</p>
-    <div class="h3">
+    <div class="h3 current-power-usage">
       {{opgenomenVermogen ? opgenomenVermogen.watt : '-'}} Watt
       <span ngbTooltip="Daltarief">
         <i *ngIf="opgenomenVermogen?.tariefIndicator == 'DAL'" class="fas fa-moon" aria-hidden="true"></i>
@@ -24,11 +24,11 @@
 
     <p class="h6" *ngIf="meterstand">
       <span ngbTooltip="Daltarief">
-        <i class="fas fa-moon" aria-hidden="true"></i> {{meterstand.stroomTarief1 | number: '1.3-3'}}
+        <i class="fas fa-moon" aria-hidden="true"></i><span class="mostrecent-meterreading-tariff1">{{meterstand.stroomTarief1 | number: '1.3-3'}}</span>
       </span>
       |
       <span ngbTooltip="Normaaltarief">
-        <i class="fas fa-sun" aria-hidden="true"></i> {{meterstand.stroomTarief2 | number: '1.3-3'}}
+        <i class="fas fa-sun" aria-hidden="true"></i><span class="mostrecent-meterreading-tariff2">{{meterstand.stroomTarief2 | number: '1.3-3'}}</span>
       </span>
     </p>
     <p class="h6" *ngIf="!meterstand">
