--- a/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
+++ b/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
@@ -59,8 +59,8 @@
     <div *ngIf="showTable" class="table-responsive">
       <table class="table table-bordered table-striped table-hover table-sm">
         <tr *ngFor="let klimaat of klimaats" class="clickable'">
-          <td class="text-right">{{ getFormattedTime(klimaat) }}</td>
-          <td class="text-right">{{ formatWithUnitLabel(sensorType, klimaat[sensorType]) }}</td>
+          <td class="text-end">{{ getFormattedTime(klimaat) }}</td>
+          <td class="text-end">{{ formatWithUnitLabel(sensorType, klimaat[sensorType]) }}</td>
           <td [style.background-color]="getColor(klimaat[sensorType])" style="width:12px;"></td>
         </tr>
       </table>
