--- a/src/app/dashboard/gas-verbruik/gas-verbruik.component.html
+++ b/src/app/dashboard/gas-verbruik/gas-verbruik.component.html
@@ -3,7 +3,7 @@
     <i class="fas fa-fire" aria-hidden="true"></i> Gas
   </div>
   <div class="card-body">
-    <div class="ledbar float-left">
+    <div class="ledbar float-start">
       <div *ngFor="let i of [9,8,7,6,5,4,3,2,1,0]" class="led" [ngClass]="gasLeds[i]?.state == LedState.ON ? 'gas-led-' + i : 'led-off'"></div>
     </div>
 
