--- a/src/app/dashboard/klimaat-luchtvochtigheid/klimaat-luchtvochtigheid.component.html
+++ b/src/app/dashboard/klimaat-luchtvochtigheid/klimaat-luchtvochtigheid.component.html
@@ -3,7 +3,7 @@
     <i class="fas fa-tint" aria-hidden="true"></i> Luchtvochtigheid
   </div>
   <div class="card-body">
-    <div class="ledbar float-left">
+    <div class="ledbar float-start">
       <div *ngFor="let i of [9,8,7,6,5,4,3,2,1,0]" class="led" [ngClass]="leds[i]?.state == LedState.ON ? 'luchtvochtigheid-led-' + i : 'led-off'"></div>
     </div>
 
