--- a/src/app/dashboard/klimaat-temperatuur/klimaat-temperatuur.component.html
+++ b/src/app/dashboard/klimaat-temperatuur/klimaat-temperatuur.component.html
@@ -3,7 +3,7 @@
     <i class="fas fa-thermometer-half" aria-hidden="true"></i> Temperatuur
   </div>
   <div class="card-body">
-    <div class="ledbar float-left">
+    <div class="ledbar float-start">
       <div *ngFor="let i of [9,8,7,6,5,4,3,2,1,0]" class="led" [ngClass]="leds[i]?.state == LedState.ON ? 'temperatuur-led-' + i : 'led-off'"></div>
     </div>
 
