--- a/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
+++ b/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
@@ -3,7 +3,7 @@
     <i class="fas fa-bolt" aria-hidden="true"></i> Stroom
   </div>
   <div class="card-body">
-    <div class="ledbar float-left">
+    <div class="ledbar float-start">
       <div *ngFor="let i of [9,8,7,6,5,4,3,2,1,0]" class="led" [ngClass]="opgenomenVermogenLeds[i]?.state == LedState.ON ? 'opgenomen-vermogen-led-' + i : 'led-off'"></div>
     </div>
 
