--- a/src/app/energie-verbruik/energie-verbruik.component.html
+++ b/src/app/energie-verbruik/energie-verbruik.component.html
@@ -100,16 +100,16 @@
         <thead>
           <tr>
             <th></th>
-            <th class="text-right" *ngIf="isEnergieSoortSelected('gas')">Gas</th>
-            <th class="text-right" *ngIf="isEnergieSoortSelected('stroom')">Stroom</th>
-            <th class="text-right" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort == 'kosten'">Totaal</th>
+            <th class="text-end" *ngIf="isEnergieSoortSelected('gas')">Gas</th>
+            <th class="text-end" *ngIf="isEnergieSoortSelected('stroom')">Stroom</th>
+            <th class="text-end" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort == 'kosten'">Totaal</th>
           </tr>
         </thead>
         <tr *ngFor="let verbruik of verbruiken" class="clickable" (click)="navigateToDetailsOfVerbruik(verbruik)">
-          <td class="text-right">{{ getFormattedDate(verbruik) }}</td>
-          <td class="text-right" *ngIf="isEnergieSoortSelected('gas')">{{ getFormattedValue(verbruik, 'gas') }}</td>
-          <td class="text-right" *ngIf="isEnergieSoortSelected('stroom')">{{ getFormattedValue(verbruik, 'stroom') }}</td>
-          <td class="text-right" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort == 'kosten'">{{ getFormattedTotalCosts(verbruik) }}</td>
+          <td class="text-end">{{ getFormattedDate(verbruik) }}</td>
+          <td class="text-end" *ngIf="isEnergieSoortSelected('gas')">{{ getFormattedValue(verbruik, 'gas') }}</td>
+          <td class="text-end" *ngIf="isEnergieSoortSelected('stroom')">{{ getFormattedValue(verbruik, 'stroom') }}</td>
+          <td class="text-end" *ngIf="isEnergieSoortSelected('stroom') && isEnergieSoortSelected('gas') && verbruiksoort == 'kosten'">{{ getFormattedTotalCosts(verbruik) }}</td>
         </tr>
       </table>
     </div>
