--- a/src/app/energiecontract/energiecontract.component.html
+++ b/src/app/energiecontract/energiecontract.component.html
@@ -3,7 +3,7 @@
     <p class="h1">Energiecontracten</p>
   </div>
 
-  <div class="col-7 text-right right-to-h1">
+  <div class="col-7 text-end right-to-h1">
     <button class='btn btn-primary' (click)="startAdd()">
       <span class="d-none d-sm-block"><i class="fas fa-plus-circle" aria-hidden="true"></i> Toevoegen</span>
       <span class="d-block d-sm-none"><i class="fas fa-plus-circle" aria-hidden="true"></i></span>
@@ -23,18 +23,18 @@
       <tr>
         <th>Vanaf</th>
         <th>Leverancier</th>
-        <th class="text-right">Gas per m<sup>3</sup></th>
-        <th class="text-right">Stroom normaaltarief (kWh)</th>
-        <th class="text-right">Stroom daltarief (kWh)</th>
+        <th class="text-end">Gas per m<sup>3</sup></th>
+        <th class="text-end">Stroom normaaltarief (kWh)</th>
+        <th class="text-end">Stroom daltarief (kWh)</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let energiecontract of energiecontracten" (click)="startEdit(energiecontract)" class="clickable" [ngClass]="{'table-primary': energiecontract.id === selectedEnergiecontract?.id}">
         <td class="text-nowrap">{{ energiecontract.validFrom | date : 'dd-MM-yyyy' }}</td>
         <td>{{ energiecontract.leverancier }}</td>
-        <td class="text-right">{{ energiecontract.gasPerKuub | currency:'EUR':'symbol':'1.6-6' }}</td>
-        <td class="text-right">{{ energiecontract.stroomPerKwhNormaalTarief | currency:'EUR':'symbol':'1.6-6' }}</td>
-        <td class="text-right">{{ energiecontract.stroomPerKwhDalTarief | currency:'EUR':'symbol':'1.6-6' }}</td>
+        <td class="text-end">{{ energiecontract.gasPerKuub | currency:'EUR':'symbol':'1.6-6' }}</td>
+        <td class="text-end">{{ energiecontract.stroomPerKwhNormaalTarief | currency:'EUR':'symbol':'1.6-6' }}</td>
+        <td class="text-end">{{ energiecontract.stroomPerKwhDalTarief | currency:'EUR':'symbol':'1.6-6' }}</td>
       </tr>
     </tbody>
   </table>
@@ -43,7 +43,7 @@
 <form [formGroup]="form" [hidden]="!editMode" class="form-horizontal" autocomplete="off" novalidate (submit)="save()">
   <hr/>
 
-  <div class="form-group row">
+  <div class="mb3 row">
     <label for="fromDate" class="col-md-4 col-lg-3 control-label">Vanaf *</label>
     <div class="col-sm-9 col-md-7 col-lg-5">
       <div class="input-group">
@@ -53,9 +53,7 @@
                [ngClass]="{'is-invalid': selectedDate.invalid}"
                theme="dp-material"
                mode="day" />
-        <span class="input-group-append">
-          <button type="button" class="btn btn-outline-secondary" (click)="openDatePicker()"><i class="fas fa-calendar" aria-hidden="true"></i></button>
-        </span>
+        <button type="button" class="btn btn-outline-secondary" (click)="openDatePicker()"><i class="fas fa-calendar" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
@@ -71,9 +69,7 @@
     <label for="gas" class="col-md-4 col-lg-3 control-label">Gas (m<sup>3</sup>) *</label>
     <div class="col-sm-9 col-md-7 col-lg-5">
       <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">&euro;</span>
-        </div>
+        <span class="input-group-text">&euro;</span>
         <input id="gas" name="gas" type="text" class="form-control" [ngClass]="{'is-invalid': gas.invalid}" formControlName="gas" />
       </div>
     </div>
@@ -83,9 +79,7 @@
     <label for="stroomNormaaltarief" class="col-md-4 col-lg-3 control-label">Stroom normaaltarief (kWh) *</label>
     <div class="col-sm-9 col-md-7 col-lg-5">
       <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">&euro;</span>
-        </div>
+        <span class="input-group-text">&euro;</span>
         <input id="stroomNormaaltarief" name="stroomNormaaltarief" type="text" class="form-control" [ngClass]="{'is-invalid': stroomNormaalTarief.invalid}" formControlName="stroomNormaalTarief" />
       </div>
     </div>
@@ -95,9 +89,7 @@
     <label for="stroomDaltarief" class="col-md-4 col-lg-3 control-label">Stroom daltarief (kWh)</label>
     <div class="col-sm-9 col-md-7 col-lg-5">
       <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">&euro;</span>
-        </div>
+        <span class="input-group-text">&euro;</span>
         <input id="stroomDaltarief" name="stroomDaltarief" type="text" class="form-control" [ngClass]="{'is-invalid': stroomDalTarief.invalid}" formControlName="stroomDalTarief" />
       </div>
     </div>
@@ -113,8 +105,8 @@
   <div class="form-group row">
     <div class="col-md-4 col-lg-3">&nbsp;</div>
     <div class="col-sm-9 col-md-7 col-lg-5">
-      <button type="button" class="btn btn-primary float-left" [hidden]="!selectedEnergiecontract" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
-      <div class="float-right">
+      <button type="button" class="btn btn-primary float-start" [hidden]="!selectedEnergiecontract" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
+      <div class="float-end">
         <button type="button" class="btn btn-primary" (click)="cancelEdit()"><i class="fa fa-ban" aria-hidden="true"></i> Annuleren</button>
         <button type="submit" class="btn btn-primary ml-1" [disabled]="form.invalid"><i class="fa fa-check" aria-hidden="true"></i> Opslaan</button>
       </div>
