--- a/src/app/klimaat/klimaat-sensors/klimaat-sensors.component.html
+++ b/src/app/klimaat/klimaat-sensors/klimaat-sensors.component.html
@@ -47,8 +47,8 @@
   <div class="form-group row">
     <div class="col-md-4 col-lg-3">&nbsp;</div>
     <div class="col-sm-9 col-md-7 col-lg-5">
-      <button type="button" class="btn btn-primary float-left" [hidden]="!selectedSensor" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
-      <div class="float-right">
+      <button type="button" class="btn btn-primary float-start" [hidden]="!selectedSensor" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
+      <div class="float-end">
         <button type="button" class="btn btn-primary" (click)="cancelEdit()"><i class="fa fa-ban" aria-hidden="true"></i> Annuleren</button>
         <button type="submit" class="btn btn-primary ml-1" [disabled]="form.invalid"><i class="fa fa-check" aria-hidden="true"></i> Opslaan</button>
       </div>
