--- a/src/app/mindergasnl/mindergasnl.component.html
+++ b/src/app/mindergasnl/mindergasnl.component.html
@@ -26,7 +26,7 @@
   <div class="form-group row">
     <div class="col-sm-4 col-md-3">&nbsp;</div>
     <div class="col-sm-6">
-      <div class="float-right">
+      <div class="float-end">
         <button *ngIf="!editMode" type="button" class='btn btn-primary' (click)="editMode = true"><i class="fas fa-edit" aria-hidden="true"></i> Wijzig</button>
         <button *ngIf="editMode" type="button" class='btn btn-primary' (click)="cancel()"><i class="fas fa-ban" aria-hidden="true"></i> Annuleren</button>
         <button *ngIf="editMode" type="submit" class='btn btn-primary ml-1' [disabled]="form.invalid"><i class="fas fa-check" aria-hidden="true"></i> Opslaan</button>
