--- a/src/app/standby-power/standby-power.component.html
+++ b/src/app/standby-power/standby-power.component.html
@@ -14,19 +14,19 @@
         <thead>
         <tr>
           <th>Maand</th>
-          <th class="text-right">Verbruik</th>
-          <th class="text-right">Kosten</th>
-          <th class="text-right">% totale kosten<sup>*</sup></th>
-          <th class="text-right">% tijd<sup>**</sup></th>
+          <th class="text-end">Verbruik</th>
+          <th class="text-end">Kosten</th>
+          <th class="text-end">% totale kosten<sup>*</sup></th>
+          <th class="text-end">% tijd<sup>**</sup></th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let standbyPowerInPeriod of standbyPowerInPeriods">
           <td class="text-capitalize">{{ standbyPowerInPeriod.fromDate | date : 'MMMM'}}</td>
-          <td class="text-right">{{standbyPowerInPeriod.standbyPower}} Watt</td>
-          <td class="text-right text-capitalize">{{standbyPowerInPeriod.costsOfStandByPower | currency: 'EUR'}}</td>
-          <td class="text-right text-capitalize">{{standbyPowerInPeriod.percentageOfTotalCost}}%</td>
-          <td class="text-right text-capitalize">{{standbyPowerInPeriod.percentageOfTotalPeriod}}%</td>
+          <td class="text-end">{{standbyPowerInPeriod.standbyPower}} Watt</td>
+          <td class="text-end text-capitalize">{{standbyPowerInPeriod.costsOfStandByPower | currency: 'EUR'}}</td>
+          <td class="text-end text-capitalize">{{standbyPowerInPeriod.percentageOfTotalCost}}%</td>
+          <td class="text-end text-capitalize">{{standbyPowerInPeriod.percentageOfTotalPeriod}}%</td>
         </tr>
         </tbody>
       </table>
