--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~bootstrap/scss/bootstrap";
+@import '~@angular/cdk/overlay-prebuilt.css';
 
 .c3-zoom-rect {
   opacity: 1 !important;
