Fixes for breaking changes of Bootstrap 5

--- a/src/app/dashboard/klimaat-luchtvochtigheid/klimaat-luchtvochtigheid.component.html
+++ b/src/app/dashboard/klimaat-luchtvochtigheid/klimaat-luchtvochtigheid.component.html
@@ -12,12 +12,12 @@
       <span *ngIf="klimaat">{{ klimaat.luchtvochtigheid | number: '1.2-2' }}%</span>
       <span *ngIf="!klimaat">-%</span>
       <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.UP">
-        <i data-fa-transform="rotate-45" class="fas fa-arrow-up text-danger ml-1" aria-hidden="true"></i>
+        <i data-fa-transform="rotate-45" class="fas fa-arrow-up text-danger ms-1" aria-hidden="true"></i>
       </span>
       <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.DOWN">
-        <i data-fa-transform="rotate--45" class="fas fa-arrow-down text-primary ml-1" aria-hidden="true"></i>
+        <i data-fa-transform="rotate--45" class="fas fa-arrow-down text-primary ms-1" aria-hidden="true"></i>
       </span>
-      <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.STABLE" class="text-success ml-1">
+      <span *ngIf="klimaat?.luchtvochtigheidTrend === Trend.STABLE" class="text-success ms-1">
         <strong>&asymp;</strong>
       </span>
     </div>
