--- a/src/app/energiecontract/energiecontract.component.html
+++ b/src/app/energiecontract/energiecontract.component.html
@@ -108,7 +108,7 @@
       <button type="button" class="btn btn-primary float-start" [hidden]="!selectedEnergiecontract" (click)="openDeletionConformationDialog(deletionConformationDialog)"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
       <div class="float-end">
         <button type="button" class="btn btn-primary" (click)="cancelEdit()"><i class="fa fa-ban" aria-hidden="true"></i> Annuleren</button>
-        <button type="submit" class="btn btn-primary ml-1" [disabled]="form.invalid"><i class="fa fa-check" aria-hidden="true"></i> Opslaan</button>
+        <button type="submit" class="btn btn-primary ms-1" [disabled]="form.invalid"><i class="fa fa-check" aria-hidden="true"></i> Opslaan</button>
       </div>
     </div>
   </div>
@@ -124,6 +124,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="dismiss('CANCEL')">Nee, niet verwijderen</button>
-    <button type="button" class="btn btn-primary ml-1" (click)="close('CONFIRM')">Ja, wel verwijderen</button>
+    <button type="button" class="btn btn-primary ms-1" (click)="close('CONFIRM')">Ja, wel verwijderen</button>
   </div>
 </ng-template>
