--- a/src/app/klimaat/klimaat-average/klimaat-average.component.html
+++ b/src/app/klimaat/klimaat-average/klimaat-average.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="col-md-4 col-lg-3 mb-2">
-    <select class="form-control" name="sensor" (change)="sensorChanged()" [(ngModel)]="sensorCode">
+    <select class="form-select" name="sensor" (change)="sensorChanged()" [(ngModel)]="sensorCode">
       <option *ngFor="let _sensor of sensors" [value]="_sensor.code">{{_sensor.omschrijving}}</option>
     </select>
   </div>
