--- a/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
+++ b/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-  <div class="col-lg-1 pr-0 d-none d-lg-block">&nbsp;</div>
+  <div class="col-lg-1 pe-0 d-none d-lg-block">&nbsp;</div>
 
   <div class="col-md-12 col-lg-11 px-0 d-none d-lg-block">
     <ul class="nav nav-tabs">
-      <li class="nav-item mr-1">
-        <select class="form-control" name="sensor" (change)="sensorChanged()" [(ngModel)]="sensorCode">
+      <li class="nav-item me-1">
+        <select class="form-select" name="sensor" (change)="sensorChanged()" [(ngModel)]="sensorCode">
           <option *ngFor="let _sensor of sensors" [value]="_sensor.code">{{_sensor.omschrijving}}</option>
         </select>
       </li>
 
-      <li class="ml-auto">
+      <li class="ms-auto">
         <home-date-navigator mode="day" [selectedDate]="date" (navigation)="onDateNavigate($event)" class="input-group mb-2"></home-date-navigator>
       </li>
     </ul>
@@ -20,17 +20,17 @@
 <div class="d-xs-block d-lg-none">
 
   <div class="row mb-2 px-2 px-sm-0">
-    <select class="form-control form-control-sm" name="sensor" (change)="sensorChanged()" [(ngModel)]="sensorCode">
+    <select class="form-select form-control-sm" name="sensor" (change)="sensorChanged()" [(ngModel)]="sensorCode">
       <option *ngFor="let _sensor of sensors" [value]="_sensor.code">{{_sensor.omschrijving}}</option>
     </select>
   </div>
 
   <!-- Energiesoort selection  -->
   <div class="row mb-2">
-    <div class="col-6 pl-2 pr-1 pl-sm-0">
+    <div class="col-6 ps-2 pe-1 ps-sm-0">
       <button class="btn btn-outline-secondary btn-sm btn-block" [ngClass]="{'active': sensorType === 'temperatuur'}" (click)="setSensorType('temperatuur')"><i class="fas fa-thermometer-half" aria-hidden="true"></i> Temperatuur (&#8451;)</button>
     </div>
-    <div class="col-6 pl-1 pr-2 pr-sm-0">
+    <div class="col-6 ps-1 pe-2 pe-sm-0">
       <button class="btn btn-outline-secondary btn-sm btn-block" [ngClass]="{'active': sensorType === 'luchtvochtigheid'}" (click)="setSensorType('luchtvochtigheid')"><i class="fas fa-tint" aria-hidden="true"></i> Luchtvochtigheid (%)</button>
     </div>
   </div>
@@ -68,7 +68,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-1 pr-0 d-none d-lg-block">&nbsp;</div>
+  <div class="col-lg-1 pe-0 d-none d-lg-block">&nbsp;</div>
   <div class="col-md-12 col-lg-11 px-2 px-sm-0">
     <home-statistics [statistics]="statistics" [decimalFormat]="getDecimalFormat(sensorType)" [valuePostfix]="getValuePostFix(sensorType)" [additionalClasses]="{'activated': showChart}"></home-statistics>
   </div>
