--- a/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
+++ b/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
@@ -25,13 +25,13 @@
     </select>
   </div>
 
-  <!-- Energiesoort selection  -->
+  <!-- Sensortype selection  -->
   <div class="row mb-2">
-    <div class="col-6 ps-2 pe-1 ps-sm-0">
-      <button class="btn btn-outline-secondary btn-sm btn-block" [ngClass]="{'active': sensorType === 'temperatuur'}" (click)="setSensorType('temperatuur')"><i class="fas fa-thermometer-half" aria-hidden="true"></i> Temperatuur (&#8451;)</button>
+    <div class="col-6 ps-2 pe-1 ps-sm-0 d-grid">
+      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': sensorType === 'temperatuur'}" (click)="setSensorType('temperatuur')"><i class="fas fa-thermometer-half" aria-hidden="true"></i> Temperatuur (&#8451;)</button>
     </div>
-    <div class="col-6 ps-1 pe-2 pe-sm-0">
-      <button class="btn btn-outline-secondary btn-sm btn-block" [ngClass]="{'active': sensorType === 'luchtvochtigheid'}" (click)="setSensorType('luchtvochtigheid')"><i class="fas fa-tint" aria-hidden="true"></i> Luchtvochtigheid (%)</button>
+    <div class="col-6 ps-1 pe-2 pe-sm-0 d-grid">
+      <button class="btn btn-outline-secondary btn-sm" [ngClass]="{'active': sensorType === 'luchtvochtigheid'}" (click)="setSensorType('luchtvochtigheid')"><i class="fas fa-tint" aria-hidden="true"></i> Luchtvochtigheid (%)</button>
     </div>
   </div>
 
