Fix padding of date selector component on small screens

--- a/src/app/energie-verbruik/energie-verbruik.component.html
+++ b/src/app/energie-verbruik/energie-verbruik.component.html
@@ -86,7 +86,7 @@
   <div class="row mb-2 px-2 px-sm-0">
     <home-date-navigator *ngIf="dateNavigatorMode != 'off'" [mode]="dateNavigatorMode" [selectedDate]="selectedDate"
                          [responsiveSize]="true" (navigation)="onDateNavigate($event)"
-                         class="input-group input-group-sm"></home-date-navigator>
+                         class="input-group input-group-sm ps-0 pe-0"></home-date-navigator>
   </div>
 </div>
 
