--- a/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
+++ b/src/app/klimaat/klimaat-historie/klimaat-historie.component.html
@@ -39,7 +39,7 @@
   <div class="row mb-2 px-2 px-sm-0">
     <home-date-navigator mode="day" [selectedDate]="date" (navigation)="onDateNavigate($event)"
                          [responsiveSize]="true"
-                         class="input-group input-group-sm"></home-date-navigator>
+                         class="input-group input-group-sm ps-0 pe-0"></home-date-navigator>
   </div>
 </div>
 
