Remove usage of form-group as it is removed from Bootstrap

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         Ongeldige gebruiksnaam en/of wachtwoord
       </div>
       <i class="fas fa-home fa-4x mb-4" aria-hidden="true"></i>
-      <div class="form-group ms-3 me-3">
+      <div class="ms-3 me-3">
         <div class="input-group mb-2">
           <div class="input-group-text"><i class="fas fa-user" aria-hidden="true"></i></div>
           <input class="form-control" type="text" id="username" name="username" [(ngModel)]="credentials.username" placeholder="Gebruikersnaam" required autofocus />
