--- a/src/app/mindergasnl/mindergasnl.component.html
+++ b/src/app/mindergasnl/mindergasnl.component.html
@@ -4,14 +4,16 @@
 
 <form [formGroup]="form" class="form-horizontal" autocomplete="off" novalidate (submit)="save()">
 
-  <div class="form-group row">
+  <div class="row mb-3">
     <label class="col-sm-4 col-md-3 text-nowrap" for="automatischUploaden">Automatisch uploaden</label>
     <div class="col-sm-6">
-      <input type="checkbox" id="automatischUploaden" formControlName="automatischUploaden" />
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="automatischUploaden" formControlName="automatischUploaden" />
+      </div>
     </div>
   </div>
 
-  <div class="form-group row">
+  <div class="row mb-3">
     <label class="col-sm-4 col-md-3">Authenticatietoken</label>
     <div class="col-sm-6">
       <input type="text" id="authenticatietoken"
@@ -23,7 +25,7 @@
     </div>
   </div>
 
-  <div class="form-group row">
+  <div class="row mb-3">
     <div class="col-sm-4 col-md-3">&nbsp;</div>
     <div class="col-sm-6">
       <div class="float-end">
